--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,15 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .debug {
+    @apply border border-red-500;
+  }
+  .horizontal {
+    @apply flex flex-row;
+  }
+  .vertical {
+    @apply flex flex-col;
+  }
+}
